syntax = "proto3";
package com.syswin.temail.gateway;

option java_package = "com.syswin.temail.gateway.entity";
option java_outer_classname = "CDTPHeaderProto";


message CDTPHeader {
  string deviceId = 1;
  int32 signatureAlgorithm = 2;
  string signature = 3;
  int32 dataEncryptionMethod = 4;
  fixed64 timestamp = 5;
  string packetId = 6;
  string sender = 7;
  string senderPK = 8;
  string receiver = 9;
  string receiverPK = 10;
  string at = 11;
  string topic = 12;
  string extraData = 13;
}
